# VectorS

./: .gitignore  README.html  README.md
robot_bringup/: CMakeLists.txt  README.md  package.xml
robot_bringup/launch/: imu_platform_bringup.launch.py  manual_platform_bringup.launch.py
robot_control/: README.md  package.xml
robot_control/arm_collision_calib/: CMakeLists.txt  README.md  package.xml
robot_control/arm_collision_calib/config/: arm_collision.yaml
robot_control/arm_collision_calib/include/arm_collision_calib/: arm_joint.hpp  robot_arm.hpp
robot_control/arm_collision_calib/launch/: arm_collision_calib.launch.py
robot_control/arm_collision_calib/src/: arm_joint.cpp  collision_calib_node.cpp  robot_arm.cpp
robot_control/manual_control/: README.md  package.xml  setup.py
robot_control/manual_control/launch/: manual_control.launch.py  web_panel.launch.py
robot_control/manual_control/manual_control/: gamepad_reader.py  manual_control_node.py  web_control_panel.py
robot_control/manual_control/web/: index.html  monitor.html
robot_control/robot_interfaces/: CMakeLists.txt  README.md  package.xml
robot_control/robot_interfaces/action/: ArmCalibrate.action  ArmPlayMotion.action  ChassisMove.action  ChassisSpan.action
robot_control/robot_interfaces/msg/: MotorState.msg
robot_control/robot_interfaces/srv/: FinishArmMotionRecording.srv  GetMotorPositionLoopPid.srv  GetMotorState.srv  SetDriveMode.srv  SetMotorPositionLoopPid.srv  StartArmMotionRecording.srv
robot_control/robot_platform/: CMakeLists.txt  README.md  package.xml
robot_control/robot_platform/config/: platform_topics.yaml
robot_control/robot_platform/include/robot_platform/: platform.hpp
robot_control/robot_platform/launch/: platform.launch.py
robot_control/robot_platform/src/: platform.cpp  platform_node.cpp
robot_control/scan_safety/: README.md  package.xml  setup.cfg  setup.py
robot_control/scan_safety/launch/: simple_scan_safety.launch.py
robot_control/scan_safety/scan_safety/: simple_scan_safety.py
robot_control/scara_arm/: CMakeLists.txt  README.md  package.xml
robot_control/scara_arm/config/: scara_arm.yaml
robot_control/scara_arm/examples/: test.cpp  test2.cpp
robot_control/scara_arm/include/scara_arm/: arm_joint.hpp  robot_arm.hpp
robot_control/scara_arm/launch/: scara_arm.launch.py  test.launch.py
robot_control/scara_arm/src/: arm_joint.cpp  robot_arm.cpp
robot_driver/: CMakeLists.txt  README.md  package.xml
robot_driver/chassis/: CMakeLists.txt  package.xml
robot_driver/chassis/config/: chassis.yaml
robot_driver/chassis/include/chassis/: diff_drive_chassis.hpp
robot_driver/chassis/src/: diff_drive_chassis.cpp
robot_driver/doc/: 电机手册提取.md
robot_driver/include/robot_driver/: can_interface.hpp  pd42_motor_sdk.hpp
robot_driver/motor/: CMakeLists.txt  README.md  package.xml
robot_driver/motor/doc/: can_interface_README.md  电机手册提取.md
robot_driver/motor/example/: pd42_motor_repl.cpp  test.cpp  test2.cpp
robot_driver/motor/include/robot_driver/: can_interface.hpp  pd42_motor.hpp  pd42_protocol.hpp
robot_driver/motor/src/: can_interface.cpp  pd42_motor.cpp
robot_driver/oradar_lidar/: README.md  package_ros2.xml
robot_driver/oradar_lidar/launch/: ms200_pointcloud.launch.py  ms200_scan.launch.py  oradar_laser.launch.py
robot_driver/oradar_lidar/rviz2/: oradar_pointcloud.rviz
robot_driver/scara_arm/: CMakeLists.txt  README.md
robot_driver/scara_arm/config/: scara_arm.yaml
robot_driver/scara_arm/examples/: scara_arm_joints_repl.cpp  test.cpp  test2.cpp
robot_driver/scara_arm/include/scara_arm/: arm_joint.hpp  motion_playback.hpp  robot_arm.hpp
robot_driver/scara_arm/launch/: scara_arm_joints_repl.launch.py
robot_driver/scara_arm/src/: arm_joint.cpp  motion_playback.cpp  robot_arm.cpp
robot_driver/src/: can_interface.cpp
robot_driver/wit_ros2_imu/launch/: rviz_and_imu.launch.py
robot_driver/wit_ros2_imu/wit_ros2_imu/: wit_ros2_imu.py
robot_perception/: CMakeLists.txt  package.xml
robot_tasks/: CMakeLists.txt  package.xml
