<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>scara_arm</name>
  <version>0.0.0</version>
  <description>SCARA 机械臂控制（Pd42 / CAN）：关节模型、碰停限位标定、span 映射与示例节点（链接 motor）</description>
  <maintainer email="yuxuan@todo.todo">yuxuan</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>motor</depend>

  <exec_depend>ros2launch</exec_depend>
  <exec_depend>ament_index_python</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
