<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>chassis</name>
  <version>0.0.0</version>
  <description>前驱差速底盘：共用 CanInterface 的双轮 Pd42 驱动封装</description>
  <maintainer email="yuxuan@todo.todo">yuxuan</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>motor</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
